2007-02-11  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Added 'th' (Thai) to ALL_LINGUAS.

2007-02-06  Pema Geyleg   <pema.geyleg@gmail.com>

	* configure.in: added dz to ALL_Linguas 

2007-02-02  Richard Hult  <richard@imendio.com>

	* Release 0.13.

2007-02-02  Naba Kumar  <naba@gnome.org>

	* libdevhelp-1.0.pc.in: Added gecko_home variable, addresses bug
	#341170.

2007-01-30  Priit Laes  <plaes@svn.gnome.org>

	* configure.in: Added 'et' to ALL_LINGUAS.

2007-01-22  David Trowbridge <trowbrds@gmail.com>

	* src/dh-html.c: Initialize the GtkMozEmbed widget to display
	about:blank instead of nothing. Fixes bug #334867.

2007-01-16  Matic Zgur <mr.zgur@gmail.com>

	* configure.in: Added 'sl' to ALL_LINGUAS.

2006-11-15  Richard Hult  <rhult@garlic>

	* src/dh-preferences.c (dh_preferences_show_dialog): Fix warning.

2006-11-10  Richard Hult  <richard@imendio.com>

	* configure.in: Fix name.

	* src/dh-base.c: (base_add_books_in_data_dir), (base_init_books),
	(dh_base_get): Remove the old non-xdg locations.

2006-08-23  Paolo Borelli  <pborelli@katamail.com>

	* src/dh-parser.c:
	* src/dh-window.c:
	* src/dh-search.c: Plug some memory leaks.

2006-08-18  Richard Hult  <richard@imendio.com>

	* src/dh-keyword-model.c: (keyword_model_get_column_type),
	* src/dh-link.c: (dh_link_get_is_deprecated),
	* src/dh-parser.c: (parser_start_node_cb):
	* src/dh-search.c: (dh_search_new, search_cell_data_func): Make
	deprecated keywords grey. Fixes bug #310542.

2006-08-17  Richard Hult  <richard@imendio.com>

	* src/dh-base.c: (base_add_books_in_data_dir), (base_init_books):
	* src/dh-parser.c: (parser_start_node_cb): Fix style and add
	parsing for the deprecated property.

2006-08-17  Richard Hult  <richard@imendio.com>

	* devhelp.desktop.in.in (_GenericName): Add generic name, fixes
	bug #349880 (Matthias Clasen).

2006-08-03  Richard Hult  <richard@imendio.com>

	* src/default-prefs-gecko-1-8.js: Comment out the document color